--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   company: pro!vision
   issue_tracker_url: https://wcm-io.atlassian.net
   license: Apache
-  min_ansible_version: 2.0
+  min_ansible_version: 2.4
 
   platforms:
   - name: Debian
@@ -50,5 +50,6 @@ dependencies:
       jenkins_plugins_jenkins_hostname: "{{ jenkins_pipeline_library_jenkins_hostname }}",
       jenkins_plugins_jenkins_port: "{{ jenkins_pipeline_library_jenkins_port }}",
       jenkins_plugins_jenkins_url_prefix: "{{ jenkins_pipeline_library_jenkins_url_prefix }}",
-      jenkins_plugins_present: "{{ jenkins_pipeline_library_plugins }}"
+      jenkins_plugins_present: "{{ jenkins_pipeline_library_plugins_present }}",
+      jenkins_plugins_absent: "{{ jenkins_pipeline_library_plugins_absent }}",
    }
