--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,6 +23,7 @@ galaxy_info:
 dependencies:
   # install jenkins
   - { role: geerlingguy.jenkins,
+      version: 3.5.0,
       jenkins_admin_username: "{{ jenkins_pipeline_library_admin_username }}",
       jenkins_admin_password: "{{ jenkins_pipeline_library_admin_password }}",
       jenkins_http_port: "{{ jenkins_pipeline_library_jenkins_port }}",
@@ -38,6 +39,7 @@ dependencies:
    }
   # install plugins
   - { role: wcm_io_devops.jenkins_plugins,
+      version: 1.0.0,
       jenkins_plugins_admin_username: "{{ jenkins_pipeline_library_admin_username }}",
       jenkins_plugins_admin_password: "{{ jenkins_pipeline_library_admin_password }}",
       jenkins_plugins_jenkins_home: "{{ jenkins_pipeline_library_jenkins_home }}",
