--- a/meta/main.yml
+++ b/meta/main.yml
@@ -35,7 +35,8 @@ dependencies:
       when: jenkins_pipeline_library_jenkins_install == true
    }
   # ensure service is started
-  - { role: wcm-io-devops.jenkins-service,
+  - { role: wcm_io_devops.jenkins_service,
+      version: 1.0.0,
       jenkins_service_hostname: "{{ jenkins_pipeline_library_jenkins_hostname }}",
       jenkins_service_port: "{{ jenkins_pipeline_library_jenkins_port }}",
       jenkins_service_url_prefix: "{{ jenkins_pipeline_library_jenkins_url_prefix }}",
