--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -4,5 +4,7 @@
   version: master
 - name: wcm_io_devops.jenkins_plugins
   version: master
+- name: wcm_io_devops.jenkins_script_security
+  version: master
 - name: geerlingguy.jenkins
   version: 3.5.0
