--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -169,3 +169,32 @@ jenkins_pipeline_library_plugins_present:
 
 # Plugins that must be absent for jenkins-pipeline-library
 jenkins_pipeline_library_plugins_absent: []
+
+# Signatures that need to be approved for jenkins-pipeline-library
+jenkins_pipeline_library_approved_signatures_present:
+  # enable marking stage as skipped
+  - staticMethod org.jenkinsci.plugins.pipeline.modeldefinition.Utils markStageSkippedForConditional java.lang.String
+  # whitelisting for logging package
+  - staticField io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel ALL
+  - staticField io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel TRACE
+  - staticField io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel DEBUG
+  - staticField io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel INFO
+  - staticField io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel DEPRECATED
+  - staticField io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel WARN
+  - staticField io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel ERROR
+  - staticField io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel FATAL
+  - staticField io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel NONE
+  - staticMethod io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel fromString java.lang.String
+  - staticMethod io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel fromInteger java.lang.Integer
+  - staticMethod io.wcm.devops.jenkins.pipeline.utils.logging.LogLevel $INIT java.lang.Object[]
+  - staticMethod io.wcm.devops.jenkins.pipeline.utils.logging.Logger getClassName java.lang.Object
+  - field io.wcm.devops.jenkins.pipeline.utils.logging.Logger name
+  - new io.wcm.devops.jenkins.pipeline.utils.logging.Logger java.lang.Object
+  - new io.wcm.devops.jenkins.pipeline.utils.TypeUtils
+  # versioning package whitelisting
+  - field io.wcm.devops.jenkins.pipeline.versioning.IntegerItem INTEGER_ZER0
+  - new io.wcm.devops.jenkins.pipeline.versioning.IntegerItem
+  - staticField io.wcm.devops.jenkins.pipeline.versioning.StringItem _QUALIFIERS
+  # native java function whitelisting
+  - method java.util.List indexOf java.lang.Object
+  - new java.util.ArrayList
