--- a/meta/main.yml
+++ b/meta/main.yml
@@ -27,6 +27,8 @@ dependencies:
       jenkins_home: "{{ jenkins_pipeline_library_jenkins_home }}",
       jenkins_hostname: "{{ jenkins_pipeline_library_jenkins_hostname }}",
       jenkins_version: "{{ jenkins_pipeline_library_jenkins_version }}",
+      jenkins_repo_url: "{{ jenkins_pipeline_library_jenkins_repo_url }}",
+      jenkins_repo_key_url: "{{ jenkins_pipeline_library_jenkins_repo_key_url }}",
       jenkins_pkg_url: "{{ jenkins_pipeline_library_jenkins_pkg_url }}",
       jenkins_process_user: "{{ jenkins_pipeline_library_jenkins_process_user }}",
       jenkins_process_group: "{{ jenkins_pipeline_library_jenkins_process_group }}",
