--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -1,5 +1,5 @@
 # The version of the jenkins when it is installed with the jenkins role dependency
-jenkins_pipeline_library_jenkins_version: 2.164.1
+jenkins_pipeline_library_jenkins_version: 2.176.1
 
 # Controls if the jenkins will be installed by the jenkins role dependency
 jenkins_pipeline_library_jenkins_install: false
@@ -52,37 +52,39 @@ jenkins_pipeline_library_plugins_present:
   - name: apache-httpcomponents-client-4-api
     version: "4.5.5-3.0"
   - name: branch-api
-    version: "2.4.0"
+    version: "2.5.2"
   - name: cloudbees-folder
-    version: "6.8"
+    version: "6.9"
   - name: config-file-provider
-    version: "3.6"
+    version: "3.6.2"
+  # do not update until configuration-as-code is 1.14+
   - name: credentials
-    version: "2.1.18"
+    version: "2.1.19"
   - name: credentials-binding
-    version: "1.18"
+    version: "1.19"
   - name: display-url-api
     version: "2.3.1"
   - name: docker-workflow
     version: "1.18"
   - name: docker-commons
-    version: "1.14"
+    version: "1.15"
   - name: durable-task
     version: "1.29"
   - name: extended-choice-parameter
     version: "0.78"
   - name: git
-    version: "3.9.3"
+    version: "3.10.0"
   - name: git-client
-    version: "2.7.6"
+    version: "2.8.0"
   - name: git-server
     version: "1.7"
   - name: handlebars
     version: "1.1.1"
   - name: http_request
-    version: "1.8.22"
+    version: "1.8.23"
   - name: jackson2-api
-    version: "2.9.8"
+    version: "2.9.9"
+  # do not update until script security can be updated to 1.56+
   - name: junit
     version: "1.27"
   - name: jquery
@@ -97,16 +99,18 @@ jenkins_pipeline_library_plugins_present:
     version: "1.23"
   - name: managed-scripts
     version: "1.4"
+  # do not update until script-security is 1.54+
   - name: matrix-project
     version: "1.13"
   - name: momentjs
     version: "1.1.1"
   - name: nodejs
-    version: "1.2.9"
+    version: "1.3.3"
   - name: pipeline-aggregator-view
     version: "1.8"
   - name: pipeline-build-step
-    version: "2.8"
+    version: "2.9"
+  # do not update until workflow-cps can be updated to 2.65+
   - name: pipeline-graph-analysis
     version: "1.9"
   - name: pipeline-input-step
@@ -115,40 +119,49 @@ jenkins_pipeline_library_plugins_present:
     version: "1.3.1"
   - name: pipeline-model-declarative-agent
     version: "1.1.1"
+  # do not update until workflow-cps is 2.70+
   - name: pipeline-model-definition
-    version: "1.3.7"
+    version: "1.3.8"
+  # do not update until workflow-cps is 2.70+
   - name: pipeline-model-api
-    version: "1.3.7"
+    version: "1.3.8"
+  # do not update until workflow-cps is 2.70+
   - name: pipeline-model-extensions
-    version: "1.3.7"
+    version: "1.3.8"
   - name: pipeline-rest-api
-    version: "2.10"
+    version: "2.11"
   - name: pipeline-stage-step
     version: "2.3"
+  # do not update until workflow-cps is 2.70+
   - name: pipeline-stage-tags-metadata
-    version: "1.3.7"
+    version: "1.3.8"
+
   - name: pipeline-stage-view
-    version: "2.10"
+    version: "2.11"
   - name: pipeline-utility-steps
     version: "2.3.0"
   - name: plain-credentials
     version: "1.5"
   - name: rebuild
-    version: "1.30"
+    version: "1.31"
   - name: scm-api
-    version: "2.4.1"
+    version: "2.5.1"
+  # do not update due to https://issues.jenkins-ci.org/browse/JENKINS-56682
   - name: script-security
     version: "1.53"
+  # do not update until credentials plugin is 2.2.0+
   - name: ssh-credentials
-    version: "1.15"
+    version: "1.16"
   - name: structs
-    version: "1.17"
+    version: "1.19"
   - name: token-macro
-    version: "2.7"
+    version: "2.8"
   - name: workflow-api
-    version: "2.33"
+    version: "2.35"
+  # do not update, requires workflow-durable-task-step > 2.31
   - name: workflow-basic-steps
     version: "2.15"
+  # do not update due to https://issues.jenkins-ci.org/browse/JENKINS-56682
   - name: workflow-cps
     version: "2.63"
   - name: workflow-cps-global-lib
@@ -160,11 +173,11 @@ jenkins_pipeline_library_plugins_present:
   - name: workflow-multibranch
     version: "2.21"
   - name: workflow-scm-step
-    version: "2.7"
+    version: "2.9"
   - name: workflow-step-api
     version: "2.19"
   - name: workflow-support
-    version: "3.2"
+    version: "3.3"
 
 # Plugins that must be absent for jenkins-pipeline-library
 jenkins_pipeline_library_plugins_absent: []
