--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -212,3 +212,8 @@ jenkins_pipeline_library_approved_signatures_present:
   - new java.util.ArrayList
   # allow creation of ExtendedChoiceParameterDefinition
   - new com.cwctravel.hudson.plugins.extended_choice_parameter.ExtendedChoiceParameterDefinition java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String boolean boolean int java.lang.String java.lang.String
+  - new java.text.SimpleDateFormat java.lang.String java.util.Locale
+  - method java.text.DateFormat parse java.lang.String
+  - method java.util.Calendar setTime java.util.Date
+  - method java.util.Calendar set int int
+  - staticMethod org.codehaus.groovy.runtime.DateGroovyMethods format java.util.Calendar java.lang.String
