--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -107,6 +107,8 @@ jenkins_pipeline_library_plugins_present:
     version: "1.14"
   - name: momentjs
     version: "1.1.1"
+  - nam: mqtt-notification-plugin
+    version: "1.7"
   - name: nodejs
     version: "1.3.4"
   - name: pipeline-aggregator-view
