--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -107,7 +107,7 @@ jenkins_pipeline_library_plugins_present:
     version: "1.14"
   - name: momentjs
     version: "1.1.1"
-  - nam: mqtt-notification-plugin
+  - name: mqtt-notification-plugin
     version: "1.7"
   - name: nodejs
     version: "1.3.4"
