--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -155,6 +155,8 @@ jenkins_pipeline_library_plugins_present:
     version: "1.18"
   - name: ssh-steps
     version: "2.0.0"
+  - name: ssh-slaves
+    version: "1.31.0"
   - name: structs
     version: "1.20"
   - name: token-macro
