--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -1,5 +1,5 @@
 # The version of the jenkins when it is installed with the jenkins role dependency
-jenkins_pipeline_library_jenkins_version: 2.190.3
+jenkins_pipeline_library_jenkins_version: 2.204.2
 
 # Controls if the jenkins will be installed by the jenkins role dependency
 jenkins_pipeline_library_jenkins_install: false
@@ -52,17 +52,19 @@ jenkins_pipeline_library_plugins_present:
   - name: apache-httpcomponents-client-4-api
     version: "4.5.10-2.0"
   - name: bouncycastle-api
-    version: "2.17"
+    version: "2.18"
   - name: branch-api
     version: "2.5.5"
   - name: cloudbees-folder
-    version: "6.10.0"
+    version: "6.11.1"
   - name: command-launcher
     version: "1.4"
   - name: config-file-provider
-    version: "3.6.2"
+    version: "3.6.3"
+  - name: configuration-as-code
+    version: "1.35"
   - name: credentials
-    version: "2.3.0"
+    version: "2.3.1"
   - name: credentials-binding
     version: "1.20"
   - name: display-url-api
@@ -70,7 +72,7 @@ jenkins_pipeline_library_plugins_present:
   - name: docker-workflow
     version: "1.21"
   - name: docker-commons
-    version: "1.15"
+    version: "1.16"
   - name: durable-task
     version: "1.33"
   - name: extended-choice-parameter
@@ -78,9 +80,9 @@ jenkins_pipeline_library_plugins_present:
   - name: email-ext
     version: "2.68"
   - name: git
-    version: "4.0.0"
+    version: "4.1.1"
   - name: git-client
-    version: "3.0.0"
+    version: "3.1.1"
   - name: git-server
     version: "1.9"
   - name: handlebars
@@ -88,7 +90,7 @@ jenkins_pipeline_library_plugins_present:
   - name: http_request
     version: "1.8.24"
   - name: jackson2-api
-    version: "2.10.1"
+    version: "2.10.2"
   - name: jdk-tool
     version: "1.4"
   - name: junit
@@ -98,15 +100,15 @@ jenkins_pipeline_library_plugins_present:
   - name: jquery-detached
     version: "1.2.1"
   - name: jsch
-    version: "0.1.55.1"
+    version: "0.1.55.2"
   - name: managed-scripts
     version: "1.4"
   - name: mailer
-    version: "1.29"
+    version: "1.30"
   - name: managed-scripts
     version: "1.4"
   - name: mattermost
-    version: "3.0.1"
+    version: "3.1.0"
   - name: matrix-project
     version: "1.14"
   - name: momentjs
@@ -116,9 +118,9 @@ jenkins_pipeline_library_plugins_present:
   - name: nodejs
     version: "1.3.4"
   - name: pipeline-aggregator-view
-    version: "1.8"
+    version: "1.9"
   - name: pipeline-build-step
-    version: "2.10"
+    version: "2.11"
   - name: pipeline-graph-analysis
     version: "1.10"
   - name: pipeline-input-step
@@ -128,35 +130,35 @@ jenkins_pipeline_library_plugins_present:
   - name: pipeline-model-declarative-agent
     version: "1.1.1"
   - name: pipeline-model-definition
-    version: "1.5.0"
+    version: "1.5.1"
   - name: pipeline-model-api
-    version: "1.5.0"
+    version: "1.5.1"
   - name: pipeline-model-extensions
-    version: "1.5.0"
+    version: "1.5.1"
   - name: pipeline-rest-api
-    version: "2.12"
+    version: "2.13"
   - name: pipeline-stage-step
     version: "2.3"
   - name: pipeline-stage-tags-metadata
-    version: "1.5.0"
+    version: "1.5.1"
   - name: pipeline-stage-view
-    version: "2.12"
+    version: "2.13"
   - name: pipeline-utility-steps
-    version: "2.3.1"
+    version: "2.5.0"
   - name: plain-credentials
-    version: "1.5"
+    version: "1.7"
   - name: rebuild
     version: "1.31"
   - name: scm-api
     version: "2.6.3"
   - name: script-security
-    version: "1.68"
+    version: "1.69"
   - name: ssh-credentials
-    version: "1.18"
+    version: "1.18.1"
   - name: ssh-steps
     version: "2.0.0"
   - name: ssh-slaves
-    version: "1.31.0"
+    version: "1.31.1"
   - name: structs
     version: "1.20"
   - name: token-macro
@@ -164,9 +166,9 @@ jenkins_pipeline_library_plugins_present:
   - name: trilead-api
     version: "1.0.5"
   - name: workflow-api
-    version: "2.38"
+    version: "2.39"
   - name: workflow-basic-steps
-    version: "2.18"
+    version: "2.19"
   - name: workflow-cps
     version: "2.78"
   - name: workflow-cps-global-lib
@@ -178,11 +180,11 @@ jenkins_pipeline_library_plugins_present:
   - name: workflow-multibranch
     version: "2.21"
   - name: workflow-scm-step
-    version: "2.9"
+    version: "2.10"
   - name: workflow-step-api
-    version: "2.21"
+    version: "2.22"
   - name: workflow-support
-    version: "3.3"
+    version: "3.4"
 
 # Plugins that must be absent for jenkins-pipeline-library
 jenkins_pipeline_library_plugins_absent: []
