--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -117,6 +117,8 @@ jenkins_pipeline_library_plugins_present:
     version: "1.7"
   - name: nodejs
     version: "1.3.5"
+  - name: Office-365-Connector
+    version: "4.12.4"
   - name: pipeline-aggregator-view
     version: "1.9"
   - name: pipeline-build-step
