--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -161,6 +161,8 @@ jenkins_pipeline_library_plugins_present:
     version: "2.0.0"
   - name: ssh-slaves
     version: "1.31.2"
+  - name: snakeyaml-api
+    version: "1.26.1"
   - name: structs
     version: "1.20"
   - name: token-macro
