--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -4,6 +4,9 @@ jenkins_pipeline_library_jenkins_version: 2.222.3
 # Controls if the jenkins will be installed by the jenkins role dependency
 jenkins_pipeline_library_jenkins_install: false
 
+# Controls the jenkins_prefer_lts option of geerlingguy.jenkins dependency
+jenkins_pipeline_library_jenkins_prefer_lts: true
+
 # Linux jenkins user
 jenkins_pipeline_library_jenkins_process_user: jenkins
 
