added support for specifying JENKINS_ARGS through new ansible-jenkins-pipeline-library role variable jenkins_pipeline_library_jenkins_args, which is a passthrough to geerlingguy's role var jenkins_init_changes["JENKINS_ARGS"]. All defaults should be same behavior as before the change.
This was required to set up https support for a jenkins instance,
which is not supported by geerlingguy's role. This is achieved by
invoking this role passingg:

jenkins_pipeline_library_jenkins_args: "--httpsPort=8443
    --httpsKeyStore=/etc/jenkins/host.jks --httpsKeyStorePassword={{
    jenkins_java_keystore_password }}  --httpsListenAddress=0.0.0.0"

Note: since geerlingguy's role does actually use JENKINS_ARGS for the
sole purpose of applying any `jenkins_url_prefix` role variable
specified, now the user needs to explicitly include the
"--prefix=myprefix" to JENKINS_ARGS. So I suppose this is a minor exception
to what I said above about the behavior not changing.

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -222,7 +222,12 @@ jenkins_pipeline_library_approved_signatures_present:
   - method java.util.List indexOf java.lang.Object
   - new java.util.ArrayList
   # allow creation of ExtendedChoiceParameterDefinition
-  - new com.cwctravel.hudson.plugins.extended_choice_parameter.ExtendedChoiceParameterDefinition java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String boolean boolean int java.lang.String java.lang.String
+  - new com.cwctravel.hudson.plugins.extended_choice_parameter.ExtendedChoiceParameterDefinition
+    java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String
+    java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String
+    java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String
+    java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String java.lang.String
+    java.lang.String java.lang.String boolean boolean int java.lang.String java.lang.String
   - new java.text.SimpleDateFormat java.lang.String java.util.Locale
   - method java.text.DateFormat parse java.lang.String
   - method java.util.Calendar setTime java.util.Date
@@ -239,5 +244,4 @@ jenkins_pipeline_library_jenkins_pkg_url: ""
 # Extra Java options for the Jenkins launch command configured in the init file.
 # Defaults to same default as geerlingguy's default
 jenkins_pipline_library_jenkins_java_options: "-Djenkins.install.runSetupWizard=false"
-
-
+jenkins_pipeline_library_jenkins_args: ""
