--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -1,5 +1,5 @@
 # The version of the jenkins when it is installed with the jenkins role dependency
-jenkins_pipeline_library_jenkins_version: 2.235.3
+jenkins_pipeline_library_jenkins_version: 2.249.2
 
 # Controls if the jenkins will be installed by the jenkins role dependency
 jenkins_pipeline_library_jenkins_install: false
@@ -54,40 +54,46 @@ jenkins_pipeline_library_plugins_present:
     version: "1.4"
   - name: apache-httpcomponents-client-4-api
     version: "4.5.10-2.0"
+  - name: bootstrap4-api
+    version: "4.5.3-1"
   - name: bouncycastle-api
     version: "2.18"
   - name: branch-api
-    version: "2.5.8"
+    version: "2.6.0"
+  - name: checks-api
+    version: "1.0.3"
   - name: cloudbees-folder
     version: "6.14"
   - name: command-launcher
-    version: "1.4"
+    version: "1.5"
   - name: config-file-provider
-    version: "3.6.3"
+    version: "3.7.0"
   - name: configuration-as-code
-    version: "1.43"
+    version: "1.45"
   - name: credentials
-    version: "2.3.12"
+    version: "2.3.13"
   - name: credentials-binding
-    version: "1.23"
+    version: "1.24"
   - name: display-url-api
     version: "2.3.3"
   - name: docker-workflow
-    version: "1.23"
+    version: "1.24"
   - name: docker-commons
     version: "1.17"
   - name: durable-task
-    version: "1.34"
+    version: "1.35"
   - name: echarts-api
-    version: "4.8.0-2"
+    version: "4.9.0-2"
   - name: extended-choice-parameter
-    version: "0.78"
+    version: "0.82"
   - name: email-ext
-    version: "2.73"
+    version: "2.77"
+  - name: font-awesome-api
+    version: "5.15.1-1"
   - name: git
-    version: "4.3.0"
+    version: "4.4.5"
   - name: git-client
-    version: "3.3.2"
+    version: "3.5.1"
   - name: git-server
     version: "1.9"
   - name: handlebars
@@ -95,37 +101,37 @@ jenkins_pipeline_library_plugins_present:
   - name: http_request
     version: "1.8.26"
   - name: jackson2-api
-    version: "2.11.2"
+    version: "2.11.3"
   - name: jdk-tool
     version: "1.4"
   - name: junit
-    version: "1.30"
+    version: "1.43"
   - name: jquery
     version: "1.12.4-1"
   - name: jquery-detached
     version: "1.2.1"
   - name: jquery3-api
-    version: "3.5.1-1"
+    version: "3.5.1-2"
   - name: jsch
     version: "0.1.55.2"
   - name: managed-scripts
     version: "1.4"
   - name: mailer
-    version: "1.32"
+    version: "1.32.1"
   - name: managed-scripts
     version: "1.4"
   - name: mattermost
-    version: "3.1.0"
+    version: "3.1.1"
   - name: matrix-project
-    version: "1.17"
+    version: "1.18"
   - name: momentjs
     version: "1.1.1"
   - name: mqtt-notification-plugin
-    version: "1.7"
+    version: "1.8"
   - name: nodejs
-    version: "1.3.7"
+    version: "1.3.9"
   - name: Office-365-Connector
-    version: "4.13.1"
+    version: "4.13.2"
   - name: pipeline-aggregator-view
     version: "1.11"
   - name: pipeline-build-step
@@ -133,37 +139,39 @@ jenkins_pipeline_library_plugins_present:
   - name: pipeline-graph-analysis
     version: "1.10"
   - name: pipeline-input-step
-    version: "2.11"
+    version: "2.12"
   - name: pipeline-milestone-step
     version: "1.3.1"
   - name: pipeline-model-declarative-agent
     version: "1.1.1"
   - name: pipeline-model-definition
-    version: "1.7.1"
+    version: "1.7.2"
   - name: pipeline-model-api
-    version: "1.7.1"
+    version: "1.7.2"
   - name: pipeline-model-extensions
-    version: "1.7.1"
+    version: "1.7.2"
   - name: pipeline-rest-api
-    version: "2.13"
+    version: "2.18"
   - name: pipeline-stage-step
     version: "2.5"
   - name: pipeline-stage-tags-metadata
-    version: "1.7.1"
+    version: "1.7.2"
   - name: pipeline-stage-view
-    version: "2.13"
+    version: "2.18"
   - name: pipeline-utility-steps
     version: "2.6.1"
   - name: plain-credentials
     version: "1.7"
   - name: plugin-util-api
-    version: "1.2.2"
+    version: "1.4.0"
+  - name: popper-api
+    version: "1.16.0-7"
   - name: rebuild
     version: "1.31"
   - name: scm-api
-    version: "2.6.3"
+    version: "2.6.4"
   - name: script-security
-    version: "1.74"
+    version: "1.75"
   - name: ssh-credentials
     version: "1.18.1"
   - name: ssh-steps
@@ -171,31 +179,31 @@ jenkins_pipeline_library_plugins_present:
   - name: ssh-slaves
     version: "1.31.2"
   - name: snakeyaml-api
-    version: "1.26.4"
+    version: "1.27.0"
   - name: structs
     version: "1.20"
   - name: token-macro
     version: "2.12"
   - name: trilead-api
-    version: "1.0.8"
+    version: "1.0.12"
   - name: workflow-api
     version: "2.40"
   - name: workflow-basic-steps
-    version: "2.20"
+    version: "2.22"
   - name: workflow-cps
-    version: "2.82"
+    version: "2.83"
   - name: workflow-cps-global-lib
     version: "2.17"
   - name: workflow-durable-task-step
-    version: "2.35"
+    version: "2.36"
   - name: workflow-job
-    version: "2.39"
+    version: "2.40"
   - name: workflow-multibranch
     version: "2.22"
   - name: workflow-scm-step
     version: "2.11"
   - name: workflow-step-api
-    version: "2.22"
+    version: "2.23"
   - name: workflow-support
     version: "3.5"
 
