Migrate to github actions, fix yamllint issues

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,4 @@
+---
 galaxy_info:
   role_name: jenkins_pipeline_library
   author: Tobias Richter
@@ -8,10 +9,10 @@ galaxy_info:
   min_ansible_version: 2.7
 
   platforms:
-  - name: Debian
-    versions:
-    - stretch
-    - buster
+    - name: Debian
+      versions:
+        - stretch
+        - buster
 
   galaxy_tags:
     - jenkins
@@ -20,42 +21,44 @@ galaxy_info:
 
 dependencies:
   # install jenkins
-  - { role: geerlingguy.jenkins,
-      version: 4.3.0,
-      jenkins_admin_username: "{{ jenkins_pipeline_library_admin_username }}",
-      jenkins_admin_password: "{{ jenkins_pipeline_library_admin_password }}",
-      jenkins_http_port: "{{ jenkins_pipeline_library_jenkins_port }}",
-      jenkins_home: "{{ jenkins_pipeline_library_jenkins_home }}",
-      jenkins_hostname: "{{ jenkins_pipeline_library_jenkins_hostname }}",
-      jenkins_version: "{{ jenkins_pipeline_library_jenkins_version }}",
-      jenkins_process_user: "{{ jenkins_pipeline_library_jenkins_process_user }}",
-      jenkins_process_group: "{{ jenkins_pipeline_library_jenkins_process_group }}",
-      jenkins_pipeline_library_jenkins_prefer_lts: "{{ jenkins_pipeline_library_jenkins_prefer_lts }}",
-      tags: ['wcm_io_devops.jenkins_pipeline_library.jenkins-installation'],
-      # only setup jenkins when enabled
-      when: jenkins_pipeline_library_jenkins_install | bool
-   }
+  - role: geerlingguy.jenkins
+    version: 4.3.0
+    jenkins_admin_username: "{{ jenkins_pipeline_library_admin_username }}"
+    jenkins_admin_password: "{{ jenkins_pipeline_library_admin_password }}"
+    jenkins_http_port: "{{ jenkins_pipeline_library_jenkins_port }}"
+    jenkins_home: "{{ jenkins_pipeline_library_jenkins_home }}"
+    jenkins_hostname: "{{ jenkins_pipeline_library_jenkins_hostname }}"
+    jenkins_version: "{{ jenkins_pipeline_library_jenkins_version }}"
+    jenkins_process_user: "{{ jenkins_pipeline_library_jenkins_process_user }}"
+    jenkins_process_group: "{{ jenkins_pipeline_library_jenkins_process_group }}"
+    jenkins_pipeline_library_jenkins_prefer_lts: "{{ jenkins_pipeline_library_jenkins_prefer_lts }}"
+    tags:
+      - 'wcm_io_devops.jenkins_pipeline_library.jenkins-installation'
+    # only setup jenkins when enabled
+    when: jenkins_pipeline_library_jenkins_install | bool
   # install plugins
-  - { role: wcm_io_devops.jenkins_plugins,
-      version: 1.5.0,
-      jenkins_plugins_admin_username: "{{ jenkins_pipeline_library_admin_username }}",
-      jenkins_plugins_admin_password: "{{ jenkins_pipeline_library_admin_password }}",
-      jenkins_plugins_jenkins_home: "{{ jenkins_pipeline_library_jenkins_home }}",
-      jenkins_plugins_jenkins_hostname: "{{ jenkins_pipeline_library_jenkins_hostname }}",
-      jenkins_plugins_jenkins_port: "{{ jenkins_pipeline_library_jenkins_port }}",
-      jenkins_plugins_jenkins_url_prefix: "{{ jenkins_pipeline_library_jenkins_url_prefix }}",
-      jenkins_plugins_present: "{{ jenkins_pipeline_library_plugins_present }}",
-      jenkins_plugins_absent: "{{ jenkins_pipeline_library_plugins_absent }}",
-   }
+  - role: wcm_io_devops.jenkins_plugins,
+    version: 1.5.0,
+    jenkins_plugins_admin_username: "{{ jenkins_pipeline_library_admin_username }}"
+    jenkins_plugins_admin_password: "{{ jenkins_pipeline_library_admin_password }}"
+    jenkins_plugins_jenkins_home: "{{ jenkins_pipeline_library_jenkins_home }}"
+    jenkins_plugins_jenkins_hostname: "{{ jenkins_pipeline_library_jenkins_hostname }}"
+    jenkins_plugins_jenkins_port: "{{ jenkins_pipeline_library_jenkins_port }}"
+    jenkins_plugins_jenkins_url_prefix: "{{ jenkins_pipeline_library_jenkins_url_prefix }}"
+    jenkins_plugins_present: "{{ jenkins_pipeline_library_plugins_present }}"
+    jenkins_plugins_absent: "{{ jenkins_pipeline_library_plugins_absent }}"
+    tags:
+      - 'wcm_io_devops.jenkins_pipeline_library.jenkins_plugins'
+
   # configure script security for jenkins-pipeline-library
-  - { role: wcm_io_devops.jenkins_script_security,
-      version: 1.1.2,
-      jenkins_script_security_admin_username: "{{ jenkins_pipeline_library_admin_username }}",
-      jenkins_script_security_admin_password: "{{ jenkins_pipeline_library_admin_password }}",
-      jenkins_script_security_jenkins_home: "{{ jenkins_pipeline_library_jenkins_home }}",
-      jenkins_script_security_jenkins_hostname: "{{ jenkins_pipeline_library_jenkins_hostname }}",
-      jenkins_script_security_jenkins_port: "{{ jenkins_pipeline_library_jenkins_port }}",
-      jenkins_script_security_jenkins_url_prefix: "{{ jenkins_pipeline_library_jenkins_url_prefix }}",
-      jenkins_script_security_approved_signatures_present: "{{ jenkins_pipeline_library_approved_signatures_present }}",
-      tags: ['wcm_io_devops.jenkins_pipeline_library.jenkins_script_security']
-    }
+  - role: wcm_io_devops.jenkins_script_security
+    version: 1.1.2
+    jenkins_script_security_admin_username: "{{ jenkins_pipeline_library_admin_username }}"
+    jenkins_script_security_admin_password: "{{ jenkins_pipeline_library_admin_password }}"
+    jenkins_script_security_jenkins_home: "{{ jenkins_pipeline_library_jenkins_home }}"
+    jenkins_script_security_jenkins_hostname: "{{ jenkins_pipeline_library_jenkins_hostname }}"
+    jenkins_script_security_jenkins_port: "{{ jenkins_pipeline_library_jenkins_port }}"
+    jenkins_script_security_jenkins_url_prefix: "{{ jenkins_pipeline_library_jenkins_url_prefix }}"
+    jenkins_script_security_approved_signatures_present: "{{ jenkins_pipeline_library_approved_signatures_present }}"
+    tags:
+      - 'wcm_io_devops.jenkins_pipeline_library.jenkins_script_security'
