--- a/meta/main.yml
+++ b/meta/main.yml
@@ -37,8 +37,8 @@ dependencies:
     # only setup jenkins when enabled
     when: jenkins_pipeline_library_jenkins_install | bool
   # install plugins
-  - role: wcm_io_devops.jenkins_plugins,
-    version: 1.5.0,
+  - role: wcm_io_devops.jenkins_plugins
+    version: 1.5.0
     jenkins_plugins_admin_username: "{{ jenkins_pipeline_library_admin_username }}"
     jenkins_plugins_admin_password: "{{ jenkins_pipeline_library_admin_password }}"
     jenkins_plugins_jenkins_home: "{{ jenkins_pipeline_library_jenkins_home }}"
