--- a/meta/main.yml
+++ b/meta/main.yml
@@ -31,7 +31,7 @@ dependencies:
     jenkins_version: "{{ jenkins_pipeline_library_jenkins_version }}"
     jenkins_process_user: "{{ jenkins_pipeline_library_jenkins_process_user }}"
     jenkins_process_group: "{{ jenkins_pipeline_library_jenkins_process_group }}"
-    jenkins_pipeline_library_jenkins_prefer_lts: "{{ jenkins_pipeline_library_jenkins_prefer_lts }}"
+    jenkins_prefer_lts: "{{ jenkins_pipeline_library_jenkins_prefer_lts }}"
     tags:
       - 'wcm_io_devops.jenkins_pipeline_library.jenkins-installation'
     # only setup jenkins when enabled
