--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -60,7 +60,7 @@ jenkins_pipeline_library_plugins_present:
   - name: apache-httpcomponents-client-4-api
     version: "4.5.13-1.0"
   - name: bootstrap4-api
-    version: "4.6.0-3"#
+    version: "4.6.0-3"
   - name: bootstrap5-api
     version: "5.1.3-4"
   - name: bouncycastle-api
